--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.intellij:forms_rt:6.0.5'
 }
